--- a/exercise_6.5/exercises/exercise1.html
+++ b/exercise_6.5/exercises/exercise1.html
@@ -20,7 +20,7 @@
     </section>
     <main>
       <h2>Box Columns</h2>
-      <div class="column">
+      <div class="column1">
         <figure>
           <img src="http://placekitten.com/452/450?image=12" alt="Placeholder kitteh">
           <figcaption>Place Kittens are great</figcaption>
@@ -34,7 +34,7 @@
           <figcaption>Place Kittens are great</figcaption>
         </figure>
       </div>
-      <div class="column">
+      <div class="column2">
         <figure>
           <img src="http://placekitten.com/452/450?image=9" alt="Placeholder kitteh">
           <figcaption>Place Kittens are great</figcaption>
